--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,9 +13,9 @@
             "request": "launch",
             "preLaunchTask": "build",
             // If you have changed target frameworks, make sure to update the program path.
-            "program": "${workspaceFolder}/bin/Debug/net5.0/moneys4-dl5.dll",
+            "program": "${workspaceFolder}/bin/Debug/net5.0/money-dl5.dll",
             //"args": ["${workspaceFolder}/z-assets/input", "${workspaceFolder}/z-assets/output"],
-            "args": ["${workspaceFolder}/assets/input.xml", "${workspaceFolder}/tmp/"],
+            "args": ["${workspaceFolder}/assets/input.xml","${workspaceFolder}/tmp"],
             "cwd": "${workspaceFolder}",
             // For more information about the 'console' field, see https://aka.ms/VSCode-CS-LaunchJson-Console
             "console": "internalConsole",
