--- a/money-dl5.csproj
+++ b/money-dl5.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
-    <RootNamespace>moneys4_dl5</RootNamespace>
+    <RootNamespace>money_dl5</RootNamespace>
   </PropertyGroup>
 
 </Project>
